--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-resource": "^1.6.4"
+    "angular-resource": "^1.6.4",
+    "angular-ui-router": "^0.4.2"
   }
 }
