--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-resource": "^1.6.4",
-    "angular-ui-router": "^0.4.2"
+    "angular-ui-router": "^0.4.2",
+    "satellizer": "^0.15.5"
   }
 }
