--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.8",
     "angular-resource": "^1.6.4",
     "angular-ui-router": "^0.4.2",
-    "satellizer": "^0.15.5"
+    "satellizer": "^0.15.5",
+    "angular-sanitize": "^1.6.4"
   }
 }
